# stow-dashboard

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  deno.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  skills.manifest.json  tailwind.config.js
docs/: deno-vs-tauri.md
docs/adr/: 0001-desktop-shell-deno-vs-tauri.md  0002-switch-desktop-shell-to-deno.md
scripts/: analyze.mjs  calibrate-usage.mjs  calibrate-usage.test.mjs  cli.mjs  prepare-deno.mjs  prepare-tauri.mjs  pricing-sync.mjs  pricing-sync.test.mjs  scan.mjs  skills.mjs  skills.test.mjs  tray.mjs  usage.mjs
src-deno/: main.ts  server.ts  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: layout.js  page.js  project-table.js
src/components/: CopyButton.js  ProjectCard.js  ProjectDetailsSheet.js  ReadmeDialog.js  ReorgReportDialog.js  ScanControls.js  SettingsDialog.js  SplitOpenButton.js  ThemeToggle.js  WelcomeScreen.js
src/hooks/: useProcesses.js
src/lib/: _smoke.test.mjs  analyze-batch.mjs  analyze-batch.test.mjs  analyzer.mjs  analyzer.test.mjs  discovery.mjs  discovery.test.mjs  dispatch.mjs  dispatch.test.mjs  distill.mjs  distill.test.mjs  history.mjs  history.test.mjs  intake.mjs  intake.test.mjs  ollama.mjs  ollama.test.mjs  open-with.mjs  open-with.test.mjs  pricing-data.json  processes.mjs  processes.test.mjs  projects.js  scan-roots.mjs  scan-roots.test.mjs  scripts.mjs  scripts.test.mjs  state-dir.mjs  state-dir.test.mjs  status.mjs  (+11 more)
(+46 files in other folders)
