[package]
name = "stow-dashboard"
version = "0.1.0"
description = "Stow Dashboard - Project Management Tray App"
authors = ["TriSoft"]
license = "MIT"
repository = "https://github.com/trisoft/stow-dashboard"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
open = "5"
